[gd_scene load_steps=33 format=2]

[ext_resource path="res://Trails.gd" type="Script" id=1]
[ext_resource path="res://GlobalAssets/PlayerArt/MapScreen.png" type="Texture" id=2]
[ext_resource path="res://PlayerLine.gd" type="Script" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://MapSettings.gd" type="Script" id=5]
[ext_resource path="res://GlobalAssets/PlayerArt/PlayerSprite.png" type="Texture" id=6]
[ext_resource path="res://PlayerEventLogic.gd" type="Script" id=7]
[ext_resource path="res://PlayerCamera.gd" type="Script" id=8]
[ext_resource path="res://Event.gd" type="Script" id=9]
[ext_resource path="res://Events.gd" type="Script" id=10]
[ext_resource path="res://RandomEvents.gd" type="Script" id=11]
[ext_resource path="res://RandomEvent_1.gd" type="Script" id=12]
[ext_resource path="res://GlobalAssets/PlayerArt/PlaceSprite.png" type="Texture" id=13]
[ext_resource path="res://Events/EventStart.gd" type="Script" id=14]
[ext_resource path="res://Events/Option3.gd" type="Script" id=15]
[ext_resource path="res://Events/Event_1.gd" type="Script" id=16]
[ext_resource path="res://Events/Option1.gd" type="Script" id=17]
[ext_resource path="res://Events/Option2.gd" type="Script" id=18]
[ext_resource path="res://Events/Event_2.gd" type="Script" id=19]
[ext_resource path="res://Events/Event_3.gd" type="Script" id=20]
[ext_resource path="res://Events/EventEnd.gd" type="Script" id=21]
[ext_resource path="res://EventWindow.gd" type="Script" id=22]
[ext_resource path="res://CrimsonText-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://EventText.gd" type="Script" id=24]
[ext_resource path="res://GlobalAssets/EventArt/Placeholder.jpg" type="Texture" id=25]
[ext_resource path="res://EventArt.gd" type="Script" id=26]
[ext_resource path="res://Choices.gd" type="Script" id=27]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://OldGameFatty.ttf"

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="DynamicFont" id=3]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 23 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 23 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Trails" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Transform" ]

[node name="MapScreen" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Button" type="Button" parent="MapScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 397.0
margin_top = 533.0
margin_right = 643.0
margin_bottom = 612.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Press me"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Route" type="Line2D" parent="MapScreen" index="1"]

position = Vector2( 513.005, 300.999 )
points = PoolVector2Array(  )
width = 10.0
default_color = Color( 0.4, 0.5, 1, 1 )
texture_mode = 917344464
sharp_limit = 2.0
round_precision = 8
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Player" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 512.005, 299.999 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]
speed = 200

[node name="Preferences" type="Node" parent="Player" index="0"]

script = ExtResource( 5 )
randomEventFrequency = 100
gameSpeed = 100

[node name="Sprite" type="Sprite" parent="Player" index="1"]

texture = ExtResource( 6 )

[node name="PlayerEventLogic" type="CollisionShape2D" parent="Player" index="2"]

scale = Vector2( 18.3025, 18.3025 )
shape = SubResource( 5 )
script = ExtResource( 7 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="PlayerCamera" type="Camera2D" parent="Player" index="3"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 8 )

[node name="Event" type="Node2D" parent="." index="2"]

script = ExtResource( 9 )

[node name="Events" type="Node2D" parent="Event" index="0"]

script = ExtResource( 10 )

[node name="RandomEvents" type="Node2D" parent="Event/Events" index="0"]

editor/display_folded = true
script = ExtResource( 11 )

[node name="RandomEvent_1" type="Node" parent="Event/Events/RandomEvents" index="0"]

script = ExtResource( 12 )
weight = 10
eventText = "YO DAWG I'M A RANDOM EVENT I COME UP WITHOUT WARNING I'M SO SPONTANEOUS HAHA"
eventArt = "res://GlobalAssets/EventArt/rANDOM.jpg"
choice_1 = "ok bud"
choiceHT_1 = "LOOK OUT FOR ME PAL"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Chowefgwefwgggwerwerg"

[node name="RandomEvent_2" type="Node" parent="Event/Events/RandomEvents" index="1"]

script = ExtResource( 12 )
weight = 2
eventText = "YO DAWG I'M sorta rare"
eventArt = "res://GlobalAssets/EventArt/rANDOM.jpg"
choice_1 = "ok bud"
choiceHT_1 = "LOOK OUT FOR ME PAL"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Chowefgwefwgggwerwerg"

[node name="RandomEvent_3" type="Node" parent="Event/Events/RandomEvents" index="2"]

script = ExtResource( 12 )
weight = 1
eventText = "YO DAWG I'M REALLY FUCKING RARE OK"
eventArt = "res://GlobalAssets/EventArt/rANDOM.jpg"
choice_1 = "ok bud"
choiceHT_1 = "LOOK OUT FOR ME PAL"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Chowefgwefwgggwerwerg"

[node name="RandomEvent_4" type="Node" parent="Event/Events/RandomEvents" index="3"]

script = ExtResource( 12 )
weight = 5
eventText = "hello I'm random how u"
eventArt = "res://GlobalAssets/EventArt/rANDOM.jpg"
choice_1 = "ok bud"
choiceHT_1 = "LOOK OUT FOR ME PAL"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Chowefgwefwgggwerwerg"

[node name="RandomEvent_5" type="Node" parent="Event/Events/RandomEvents" index="4"]

script = ExtResource( 12 )
weight = 5
eventText = "good morning"
eventArt = "res://GlobalAssets/EventArt/rANDOM.jpg"
choice_1 = "ok bud"
choiceHT_1 = "LOOK OUT FOR ME PAL"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Chowefgwefwgggwerwerg"

[node name="StaticEvents" type="Node2D" parent="Event/Events" index="1"]

position = Vector2( 0, -2 )

[node name="Start" type="Sprite" parent="Event/Events/StaticEvents" index="0"]

position = Vector2( 249.626, 341.019 )
texture = ExtResource( 13 )
script = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]
eventLocation = 0
eventText = "This is the start of the game. It's an \"Event\" too! \\n \\n We could use this to setup the start of a narrative, if we wanted to."
eventArt = "res://GlobalAssets/EventArt/StartArt.jpg"
choice_1 = "Tell me more."
choiceHT_1 = "I'm interested."
choiceArg_1 = "none"
choice_2 = "Back"
choiceHT_2 = "Go back to the blank screen."
choiceArg_2 = "Choice 2 Arguments"

[node name="Option3" type="Node2D" parent="Event/Events/StaticEvents/Start" index="0"]

position = Vector2( -1.39838, -0.749879 )
script = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]
eventLocation = 1
eventText = "Choice 1 Text"
eventArt = "none"
choice_1 = "Back to Game!"
choiceHT_1 = "Outta here."
choiceArg_1 = "none"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Choice 2 Arguments"

[node name="1" type="Sprite" parent="Event/Events/StaticEvents" index="1"]

position = Vector2( 732.631, 88.4209 )
scale = Vector2( 100, 100 )
script = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]
eventLocation = 2
eventText = "Suddenly, a wild Kai appears! She looks dumb.\\n\\nWhat do you do?"
eventArt = "none"
choice_1 = "GO LAY DOWN"
choiceHT_1 = "GO TO YOUR PLACE"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "awww"
choiceHT_2 = "What a cutie. I'm infatuated."
choiceArg_2 = "Choice 2 Arguments"

[node name="Option1" type="Node2D" parent="Event/Events/StaticEvents/1" index="0"]

scale = Vector2( 1e-005, 1e-005 )
script = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]
eventLocation = 1
eventText = "Aww. She's sad."
eventArt = "res://GlobalAssets/EventArt/KaiSad.jpg"
choice_1 = "Now I feel bad."
choiceHT_1 = ":("
choiceArg_1 = "none"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Choice 2 Arguments"

[node name="Option2" type="Node2D" parent="Event/Events/StaticEvents/1" index="1"]

position = Vector2( 0.507246, -0.492753 )
scale = Vector2( 1e-005, 1e-005 )
script = ExtResource( 18 )
_sections_unfolded = [ "Transform" ]
eventLocation = 1
eventText = "She might be a cutie, but man is she annoying."
eventArt = "res://GlobalAssets/EventArt/KaiHappy.jpg"
choice_1 = "Let's give her the slip."
choiceHT_1 = "Outta here."
choiceArg_1 = "none"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Choice 2 Arguments"

[node name="2" type="Sprite" parent="Event/Events/StaticEvents" index="2"]

position = Vector2( 433.887, 110.262 )
scale = Vector2( 100, 100 )
script = ExtResource( 19 )
_sections_unfolded = [ "Transform" ]
eventLocation = 4
eventText = "Event2Text"
eventArt = "Event2Art"
choice_1 = "Button 1 Text"
choiceHT_1 = "Choice 1 Tooltip"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Choice 2 Arguments"

[node name="3" type="Sprite" parent="Event/Events/StaticEvents" index="3"]

position = Vector2( 262.057, 206.238 )
scale = Vector2( 100, 100 )
script = ExtResource( 20 )
_sections_unfolded = [ "Transform" ]
eventLocation = 6
eventText = "Event3Text"
eventArt = "Event3Art"
choice_1 = "Button 1 Text"
choiceHT_1 = "Choice 1 Tooltip"
choiceArg_1 = "Choice 1 Arguments"
choice_2 = "none"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "Choice 2 Arguments"

[node name="End" type="Sprite" parent="Event/Events/StaticEvents" index="4"]

position = Vector2( 398.679, 347.368 )
scale = Vector2( 100, 100 )
script = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]
eventLocation = 8
eventText = "EndText"
eventArt = "EndArt"
choice_1 = "Button 1 Text"
choiceHT_1 = "Choice 1 Tooltip"
choiceArg_1 = "Start"
choice_2 = "Back"
choiceHT_2 = "Choice 2 Tooltip"
choiceArg_2 = "none"

[node name="EventPopup" type="WindowDialog" parent="Event" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 95.0
margin_right = 802.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = ""
resizable = false
script = ExtResource( 22 )
_sections_unfolded = [ "Dialog", "Popup", "Rect" ]
__meta__ = {
"_edit_horizontal_guides_": [ 320.0 ],
"_edit_vertical_guides_": [ 459.006, 237.005, 117.141, 700.025, 580.005, 350.054, 410.017 ]
}

[node name="EventText" type="Label" parent="Event/EventPopup" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 272.0
margin_right = 680.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "eventText"
align = 3
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 24 )
_sections_unfolded = [ "custom_fonts" ]

[node name="EventArt" type="TextureRect" parent="Event/EventPopup" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 197.0
margin_top = 6.0
margin_right = 502.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 25 )
expand = true
stretch_mode = 0
script = ExtResource( 26 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Choices" type="Node2D" parent="Event/EventPopup" index="3"]

position = Vector2( 237, 320 )
script = ExtResource( 27 )

[node name="Choice_1" type="Button" parent="Event/EventPopup/Choices" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 65.0
margin_right = 173.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "button_1"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Rect", "custom_fonts" ]

[node name="Choice_2" type="Button" parent="Event/EventPopup/Choices" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_top = 65.0
margin_right = 342.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "button_2"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="test" type="Button" parent="Event/EventPopup/Choices" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -120.0
margin_top = 65.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "button_1"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="gameticked" from="." to="Event" method="_on_MainGame_gameticked"]

[connection signal="pressed" from="MapScreen/Button" to="." method="_on_Button_pressed"]

[connection signal="_draw_event" from="Player/PlayerEventLogic" to="Event/Events/RandomEvents" method="_on_PlayerEventLogic__draw_event"]

[connection signal="event_picked" from="Event" to="Event/EventPopup" method="_on_Event_event_picked"]

[connection signal="event_picked" from="Event/Events/RandomEvents" to="Event/EventPopup" method="_on_RandomEvents_event_picked"]

[connection signal="event_picked" from="Event/EventPopup/Choices" to="Event/EventPopup" method="_on_Choices_event_picked"]

[connection signal="pressed" from="Event/EventPopup/Choices/Choice_1" to="Event/EventPopup/Choices" method="_on_Choice_1_pressed"]

[connection signal="pressed" from="Event/EventPopup/Choices/Choice_2" to="Event/EventPopup/Choices" method="_on_Choice_2_pressed"]


